syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.manuel.grpctest";
option java_outer_classname = "ManuelProto";

service MessageStreamer {
  rpc SendMessageStream (StreamRequest) returns (stream StreamResponse) {}
}

message StreamRequest{
  string id = 1;
}

message StreamResponse{
  string validation = 1;
  int32 elem = 2;
}